# codexium-magnus

./: .editorconfig  .gitignore  CMakeLists.txt  CodexiumMagnus.sln  Directory.Build.props  INSTALL.md  Makefile  NuGet.config  README.md
doc-archive/: ChatGPT5_Evaluation.md  Codexium_Magnus_Detailed_Design_v1.0.md  Codexium_Magnus_Detailed_Design_v1.1.md  requirements-update-11Nov2025.md
docs/: 11Nov2025-Primer.md  Codexium_Magnus_Architecture.md  Codexium_Magnus_Detailed_Design_v1.2.md  Codexium_Magnus_HLD_v1.0_draft.md  Codexium_Magnus_Implementation_Plan.md  Codexium_Magnus_Project_Rules.md  Codexium_Magnus_Qt6_Migration_Path.md  Codexium_Magnus_Requirements.md  Makefile  README.adoc  README_Primer.md  SESSION_SUMMARY_2025-12-10.md
docs/asciidoc/: CONVERSION_SUMMARY.md  RESTART_PRIMER.md  architecture.adoc  attributes.adoc  detailed-design.adoc  hld.adoc  implementation-plan.adoc  project-rules.adoc  qt6-migration.adoc  requirements.adoc
docs/asciidoc/diagrams/: architecture-overview.mmd  component-diagram.mmd  data-flow.mmd  migration-phases.mmd  print-flow.mmd  theme-system.mmd
docs/journal/: README.md  README_Primer.md  index.adoc
docs/journal/2025/: 2025-11-11.md  2025-12-10.md
docs/stylesheets/: codexium-magnus.css
docs/summaries/: Session-Summary_2025-12-10.md
scripts/: README.md  build-windows.bat  build-windows.ps1  configure-windows.bat  configure-windows.ps1  install-windows.bat  install-windows.ps1  run-windows.bat  run-windows.ps1
src/: CMakeLists.txt
src/CodexiumMagnus/: App.axaml  App.axaml.cs  CodexiumMagnus.csproj  MainWindow.axaml  MainWindow.axaml.cs  Program.cs  app.manifest
src/CodexiumMagnus.Core/: Class1.cs
src/CodexiumMagnus.Core/Configuration/: CompositeConfigurationResolver.cs  ConfigurationSource.cs
src/CodexiumMagnus.Core/Models/: BibliographyConfig.cs  TypographyConfig.cs
src/CodexiumMagnus.Core/Reporting/: ReportEntry.cs  ReportSeverity.cs  ReportWriter.cs
src/CodexiumMagnus.Storage/: Class1.cs  CodexiumMagnus.Storage.csproj  DbInitializeer.cs
src/CodexiumMagnus/Services/: CefBridge.cs  CefBridgeStub.cs
src/codexium-magnus/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/codexium-magnus-core/Configuration/: CompositeConfigurationResolver.cpp  CompositeConfigurationResolver.h  ConfigurationSource.cpp  ConfigurationSource.h
src/codexium-magnus-core/Models/: BibliographyConfig.cpp  BibliographyConfig.h  TypographyConfig.cpp  TypographyConfig.h
src/codexium-magnus-core/Reporting/: ReportEntry.cpp  ReportEntry.h  ReportSeverity.cpp  ReportSeverity.h  ReportWriter.cpp  ReportWriter.h
src/codexium-magnus-storage/: CMakeLists.txt  DbInitializer.cpp  DbInitializer.h
src/codexium-magnus/Services/: CartridgeService.cpp  CartridgeService.h  ICartridgeService.h  ILinkService.h  IPrintService.h  ISearchService.h  ISignatureService.h  LinkService.cpp  LinkService.h  PrintService.cpp  PrintService.h  SearchService.cpp  SearchService.h  SignatureService.cpp  SignatureService.h  WebEngineBridge.cpp  WebEngineBridge.h
src/codexium-magnus/Theme/: ThemeManager.cpp  ThemeManager.h
src/codexium-magnus/UI/: BibliographySettingsWidget.cpp  BibliographySettingsWidget.h  DocumentViewerWindow.cpp  DocumentViewerWindow.h  HelpDialog.cpp  HelpDialog.h  NavigationPane.cpp  NavigationPane.h  SearchPane.cpp  SearchPane.h  SettingsDialog.cpp  SettingsDialog.h  TypographySettingsWidget.cpp  TypographySettingsWidget.h
tests/CodexiumMagnus.Core.Tests/: CodexiumMagnus.Core.Tests.csproj
tests/CodexiumMagnus.Core.Tests/Configuration/: CompositeConfigurationResolverTests.cs
tests/CodexiumMagnus.Storage.Tests/: CodexiumMagnus.Storage.Tests.csproj  DbInitializerTests.cs
tests/codexium-magnus-core-tests/: CMakeLists.txt
tests/codexium-magnus-core-tests/Configuration/: CompositeConfigurationResolverTests.cpp
tests/codexium-magnus-storage-tests/: CMakeLists.txt  DbInitializerTests.cpp
tests/codexium-magnus-tests/: CMakeLists.txt  main.cpp
tests/codexium-magnus-tests/Services/: CartridgeServiceTests.cpp  CartridgeServiceTests.h  LinkServiceTests.cpp  LinkServiceTests.h  SearchServiceTests.cpp  SearchServiceTests.h  SignatureServiceTests.cpp  SignatureServiceTests.h
tests/codexium-magnus-tests/Theme/: ThemeManagerTests.cpp  ThemeManagerTests.h
tests/codexium-magnus-tests/UI/: BibliographySettingsWidgetTests.cpp  BibliographySettingsWidgetTests.h  SettingsDialogTests.cpp  SettingsDialogTests.h  TypographySettingsWidgetTests.cpp  TypographySettingsWidgetTests.h
tests/playwright/: .npmrc
